--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script src="bundle.js"></script>
+  <!-- <script src="bundle.js"></script> -->
   <script src="js/jquery.min.js" type="594ec2c2c6ebfd9a7c610328-text/javascript"></script>
   <script src="js/popper.min.js" type="594ec2c2c6ebfd9a7c610328-text/javascript"></script>
   <script src="js/bootstrap.min.js" type="594ec2c2c6ebfd9a7c610328-text/javascript"></script>
@@ -105,8 +105,8 @@
   <script src="js/chart-custom.js" type="594ec2c2c6ebfd9a7c610328-text/javascript"></script>
   <!-- Custom JavaScript -->
   <script src="js/custom.js" type="594ec2c2c6ebfd9a7c610328-text/javascript"></script>
-  <script src="../../cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js"
-    data-cf-settings="594ec2c2c6ebfd9a7c610328-|49" defer></script>
+  <!-- <script src="../../cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js"
+    data-cf-settings="594ec2c2c6ebfd9a7c610328-|49" defer></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
