--- a/public/index.html
+++ b/public/index.html
@@ -78,13 +78,13 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/systemjs@0.19.47/dist/system.js"></script>
     <script src="/example-runner/charts-react-boilerplate/systemjs.config.js"></script>
-    <script>
+    <!-- <script>
       System.import(
         "/reactFunctional/candlestick-series/examples/simple-candlestick/index.jsx",
       ).catch(function (err) {
         console.error(err);
       });
-    </script>
+    </script> -->
 </body>
 
 </html>
