--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 
-    <script src="/reactFunctional/candlestick-series/examples/simple-candlestick/data.js"></script>
+    <!-- <script src="/reactFunctional/candlestick-series/examples/simple-candlestick/data.js"></script> -->
     <script>
       var appLocation =
         "/reactFunctional/candlestick-series/examples/simple-candlestick";
@@ -77,7 +77,7 @@
       };
     </script>
     <script src="https://cdn.jsdelivr.net/npm/systemjs@0.19.47/dist/system.js"></script>
-    <script src="/example-runner/charts-react-boilerplate/systemjs.config.js"></script>
+    <!-- <script src="/example-runner/charts-react-boilerplate/systemjs.config.js"></script> -->
     <!-- <script>
       System.import(
         "/reactFunctional/candlestick-series/examples/simple-candlestick/index.jsx",
