--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,8 @@
 
     <!-- <script src="/reactFunctional/candlestick-series/examples/simple-candlestick/data.js"></script> -->
     <script>
-      var appLocation =
-        "/reactFunctional/candlestick-series/examples/simple-candlestick";
+      // var appLocation =
+      //   "/reactFunctional/candlestick-series/examples/simple-candlestick";
       var boilerplatePath = "/example-runner/charts-react-boilerplate";
       var systemJsMap = {
         "ag-charts-community":
