--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
-  <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/favicon.ico" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/logo-full2.png" />
   <link id="bootstrap-css" rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/typography.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
@@ -19,7 +19,7 @@
   <link href='%PUBLIC_URL%/assets/fullcalendar/timegrid/main.css' rel='stylesheet' />
   <link href='%PUBLIC_URL%/assets/fullcalendar/list/main.css' rel='stylesheet' />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/flatpickr.min.css">
-  <title>React App</title>
+  <title>Next Brand</title>
 
 
 
