--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/assets/images/logo-17.png" />
+  <link rel="icon" href="%PUBLIC_URL%/assets/images/trade-logo2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
-  <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/logo-17.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/trade-logo2.png" />
   <link id="bootstrap-css" rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/typography.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
