--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <link href='%PUBLIC_URL%/assets/fullcalendar/timegrid/main.css' rel='stylesheet' />
   <link href='%PUBLIC_URL%/assets/fullcalendar/list/main.css' rel='stylesheet' />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/flatpickr.min.css">
-  <title>Next Brand</title>
+  <title>Trade Street</title>
 
 
 
