--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/assets/images/trade-logo2.png" />
+  <link rel="icon" href="%PUBLIC_URL%/assets/images/ext1.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
-  <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/trade-logo2.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/ext.png" />
   <link id="bootstrap-css" rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/typography.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
@@ -19,7 +19,7 @@
   <link href='%PUBLIC_URL%/assets/fullcalendar/timegrid/main.css' rel='stylesheet' />
   <link href='%PUBLIC_URL%/assets/fullcalendar/list/main.css' rel='stylesheet' />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/flatpickr.min.css">
-  <title>Trade Street</title>
+  <title>Next Brand</title>
 
 
 
