--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/assets/images/faviconin.png" />
+  <link rel="icon" class="set_favicon" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-
-  <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/faviconin.png" />
   <link id="bootstrap-css" rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/typography.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
@@ -19,10 +17,10 @@
   <link href='%PUBLIC_URL%/assets/fullcalendar/timegrid/main.css' rel='stylesheet' />
   <link href='%PUBLIC_URL%/assets/fullcalendar/list/main.css' rel='stylesheet' />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/flatpickr.min.css">
-  <title>Inalgo AI</title>
+  <title class="title_name"> </title>
 
 
-
+  
 
 
 </head>
@@ -77,14 +75,7 @@
     };
   </script>
   <script src="https://cdn.jsdelivr.net/npm/systemjs@0.19.47/dist/system.js"></script>
-  <!-- <script src="/example-runner/charts-react-boilerplate/systemjs.config.js"></script> -->
-  <!-- <script>
-      System.import(
-        "/reactFunctional/candlestick-series/examples/simple-candlestick/index.jsx",
-      ).catch(function (err) {
-        console.error(err);
-      });
-    </script> -->
+ 
 
 </body>
 
