--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,8 @@
   <link href='%PUBLIC_URL%/assets/fullcalendar/timegrid/main.css' rel='stylesheet' />
   <link href='%PUBLIC_URL%/assets/fullcalendar/list/main.css' rel='stylesheet' />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/flatpickr.min.css">
-  <title class="title_name"> </title>
-
-
-  
-
-
+  <!-- <title class="title_name"></title> -->
+  <title class="title_name">TradeStreet</title>
 </head>
 
 <body class="sidebar-main-menu ">
@@ -56,7 +52,7 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 
-  <!-- <script src="/reactFunctional/candlestick-series/examples/simple-candlestick/data.js"></script> -->
+     
   <script>
     // var appLocation =
     //   "/reactFunctional/candlestick-series/examples/simple-candlestick";
